# filmweb-cli

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  filmweb-fzf  pyproject.toml
.github/workflows/: main-ci.yaml
requirements/: base.txt  dev.txt
src/filmweb_cli/: cli.py  cli_config.py  client.py  display.py  filmweb_types.py
src/filmweb_cli/display/: character_preview.py  console.py  content_preview.py  formatters.py  people_preview.py  search.py  top_roles_preview.py  vod.py  worlds_preview.py
src/filmweb_cli/exceptions/: exceptions.py
src/filmweb_cli/schemas/: cast.py  people.py  search.py
src/filmweb_cli/schemas/info/: content_info.py  info.py  people_characters_info.py  ranking.py  rating.py  worlds.py
src/filmweb_cli/schemas/search/: hits.py  response.py
src/filmweb_cli/schemas/vod/: payments.py  vod_providers.py
src/filmweb_cli/services/: base_service.py  info_service.py  ranking_service.py  search_config.py  search_service.py  vod_service.py
